fix overflow styling

--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 html {
-  font-size: 62.5%;
+  font-size: 50%;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 html * {
   box-sizing: border-box;
@@ -16,9 +17,9 @@ body {
   color: #333;
   margin: 0;
   padding: 0;
-  overflow: hidden;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
+  background-color: rgb(220, 220, 220);
 }
 
 header {
@@ -72,7 +73,6 @@ main {
   top: 60px;
   left: 0;
   right: 0;
-  bottom: 40px;
   font-family: "Noto Sans KR", sans-serif;
   font-size: 1.6rem;
   line-height: 1.5;
@@ -81,8 +81,9 @@ main {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.151);
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+  grid-auto-rows: 1fr;
   grid-gap: 10px;
+  height: 100%;
 }
 main > h2 {
   position: absolute;
@@ -98,9 +99,6 @@ main > div[class="filter-container"] {
   position: relative;
   top: 20px;
   grid-column: 1 / 2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -138,15 +136,19 @@ main > div[class="filter-container"] > button:active {
   border: 1px solid rgb(50, 50, 50);
 }
 main > div[class="project-container"] {
-  position: relative;
+  position: absolute;
+  top: 420px;
+  left: 0;
+  right: 0;
+  bottom: 0;
   grid-column: 1 / 2;
-  grid-row: 3 / 6;
-  height: auto;
+  height: 100%;
+  width: 100%;
   display: grid;
-  max-height: 100%;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 80px 1fr;
-  margin: 15px;
+  background-color: rgb(220, 220, 220);
+  margin: 1em;
 }
 main > div[class="project-container"] > h2 {
   position: relative;
@@ -188,9 +190,10 @@ main > div[class="project-container"] > div {
   display: flex;
   flex-direction: column;
   grid-column: 1 / 5;
-  grid-row: 2 / 3;
   gap: 10px;
-  margin-right: 5px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  width: 95%;
 }
 main > div[class="project-container"] > div > div {
   position: relative;
@@ -251,8 +254,7 @@ main > div[class="todo-container"] {
   width: 100%;
   margin: 0 auto;
   min-width: 600px;
-  min-height: calc(100vh - 100px);
-  max-height: 100%;
+  min-height: 100%;
   background-color: rgb(236, 236, 236);
 }
 footer {
@@ -501,8 +503,8 @@ form button:active {
 .todos > div {
   width: 100%;
   height: 100%;
-  min-width: 300px;
-  min-height: 300px;
+  min-width: 250px;
+  min-height: 250px;
   max-width: 400px;
   max-height: 400px;
   border-radius: 5px;
